# resume-super-parser

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  frontend_server.py  pyproject.toml  test_pipeline.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  dependencies.py  main.py
app/api/: dashboard.py  router.py
app/api/middleware/: request_id.py
app/api/v1/: jobs.py  metrics.py  resumes.py
app/core/: cost.py  exceptions.py  logging.py
app/db/: session.py
app/db/models/: __init__.py  document.py  job.py
app/pipeline/: orchestrator.py
app/pipeline/steps/: confidence_scorer.py  gemini_extractor.py  langextract_extractor.py  normalizer.py  ocr_client.py  pdf_extractor.py  quality_scorer.py  section_detector.py
app/schemas/: api.py  canonical.py  internal.py
app/storage/: file_store.py
app/workers/: celery_app.py  tasks.py
docker/: Dockerfile.api  Dockerfile.worker
tests/integration/: test_api_health.py
tests/unit/: test_confidence_scorer.py  test_hashing.py  test_normalizer.py  test_quality_scorer.py  test_section_detector.py
